@@ -15,16 +15,13 @@ import java.lang.reflect.Field;
 import java.net.MalformedURLException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
-import com.github.tomakehurst.wiremock.WireMockServer;
-import com.github.tomakehurst.wiremock.client.WireMock;
-import org.apache.commons.io.FileUtils;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
@@ -46,6 +43,9 @@ import org.openstreetmap.josm.testutils.annotations.BasicPreferences;
 import org.openstreetmap.josm.testutils.annotations.BasicWiremock;
 import org.openstreetmap.josm.testutils.annotations.Projection;
 import org.openstreetmap.josm.tools.ReflectionUtils;
+
+import com.github.tomakehurst.wiremock.WireMockServer;
+import com.github.tomakehurst.wiremock.client.WireMock;
 
 /**
  * Unit tests for class {@link WMTSTileSource}.
@@ -275,9 +275,7 @@ class WMTSTileSourceTest {
     void testTwoTileSetsForOneProjection() throws Exception {
         ProjectionRegistry.setProjection(Projections.getProjectionByCode("EPSG:3857"));
         ImageryInfo ontario = getImagery(TestUtils.getTestDataRoot() + "wmts/WMTSCapabilities-Ontario.xml");
-        ontario.setDefaultLayers(Arrays.asList(new DefaultLayer[] {
-                new DefaultLayer(ImageryType.WMTS, "Basemap_Imagery_2014", null, "default028mm")
-        }));
+        ontario.setDefaultLayers(Collections.singletonList(new DefaultLayer(ImageryType.WMTS, "Basemap_Imagery_2014", null, "default028mm")));
         WMTSTileSource testSource = new WMTSTileSource(ontario);
         testSource.initProjection(ProjectionRegistry.getProjection());
         assertEquals(
@@ -292,9 +290,9 @@ class WMTSTileSourceTest {
     void testTwoTileSetsForOneProjectionSecondLayer() throws Exception {
         ProjectionRegistry.setProjection(Projections.getProjectionByCode("EPSG:3857"));
         ImageryInfo ontario = getImagery(TestUtils.getTestDataRoot() + "wmts/WMTSCapabilities-Ontario.xml");
-        ontario.setDefaultLayers(Arrays.asList(new DefaultLayer[] {
+        ontario.setDefaultLayers(Collections.singletonList(
                 new DefaultLayer(ImageryType.WMTS, "Basemap_Imagery_2014", null, "GoogleMapsCompatible")
-        }));
+        ));
         WMTSTileSource testSource = new WMTSTileSource(ontario);
         testSource.initProjection(ProjectionRegistry.getProjection());
         assertEquals(
@@ -383,7 +381,7 @@ class WMTSTileSourceTest {
                 );
 
         tileServer.stubFor(
-                WireMock.get("//maps")
+                WireMock.get("/other/maps")
                 .willReturn(
                         WireMock.aResponse().withBody(
                 "<?xml version='1.0' encoding='UTF-8'?>\n" +
@@ -392,6 +390,7 @@ class WMTSTileSourceTest {
                 "<name>Landsat</name>\n" +
                 "<id>landsat</id>\n" +
                 "<type>wmts</type>\n" +
+                "<category>photo</category>\n" +
                 "<url><![CDATA[" + tileServer.url("/getcapabilities.xml") + "]]></url>\n" +
                 "<default-layers>" +
                 "<layer name=\"GEOGRAPHICALGRIDSYSTEMS.MAPS\" />" +
@@ -400,7 +399,7 @@ class WMTSTileSourceTest {
                 "</imagery>"
                 )));
 
-        Config.getPref().putList("imagery.layers.sites", Collections.singletonList(tileServer.url("//maps")));
+        Config.getPref().putList("imagery.layers.sites", Collections.singletonList(tileServer.url("/other/maps")));
         ImageryLayerInfo.instance.loadDefaults(true, null, false);
 
         assertEquals(1, ImageryLayerInfo.instance.getDefaultLayers().size());
@@ -488,12 +487,12 @@ class WMTSTileSourceTest {
     @ValueSource(strings = {"image/jpgpng", "image/png8", "image/png; mode=8bit", "image/jpeg", "image/jpg"})
     void testSupportedMimeTypesUrlEncode(String mimeType, @TempDir File temporaryDirectory)
             throws IOException, WMTSGetCapabilitiesException, ReflectiveOperationException {
-        final String data = FileUtils.readFileToString(new File(TestUtils.getTestDataRoot() +
-                "wmts/bug13975-multiple-tile-matrices-for-one-layer-projection.xml"), StandardCharsets.UTF_8)
+        final String data = Files.readString(Paths.get(TestUtils.getTestDataRoot() +
+                        "wmts", "bug13975-multiple-tile-matrices-for-one-layer-projection.xml"), StandardCharsets.UTF_8)
                 .replace("image/jpgpng", mimeType);
-        File file = new File(temporaryDirectory, "testSupportedMimeTypes.xml");
-        FileUtils.writeStringToFile(file, data, StandardCharsets.UTF_8);
-        WMTSCapabilities capabilities = WMTSTileSource.getCapabilities(file.toURI().toURL().toExternalForm(), Collections.emptyMap());
+        Path file = temporaryDirectory.toPath().resolve("testSupportedMimeTypes.xml");
+        Files.writeString(file, data, StandardCharsets.UTF_8);
+        WMTSCapabilities capabilities = WMTSTileSource.getCapabilities(file.toUri().toURL().toExternalForm(), Collections.emptyMap());
         assertEquals(2, capabilities.getLayers().size());
         Field format = WMTSTileSource.Layer.class.getDeclaredField("format");
         ReflectionUtils.setObjectsAccessible(format);
